src/main/java/com/example/project1/_core/errors/exception/ApiException403.java
package com.example.project1._core.errors.exception;

public class ApiException403 extends RuntimeException {
    public ApiException403(String msg){
        super(msg);
    }
}
